# snake-game-cpp

./: .gitignore  CMakeLists.txt  main.cpp
database/: database.cpp  database.h
desk/: cell.cpp  cell.h  desk.cpp  desk.h
